// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag colorNeutral text text--sm text--neutral text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorWarning text text--sm text--warning text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorBrand text text--sm text--brand text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorError text text--sm text--error text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorYellow text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorSuccess text text--sm text--success text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="tag colorWarning text text--sm text--warning text--bold-weight"
>
  ​
  <span
    class="body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag colorNeutral outline text text--sm text--neutral text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorWarning outline text text--sm text--warning text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorBrand outline text text--sm text--brand text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorError outline text text--sm text--error text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorYellow outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorSuccess outline text text--sm text--success text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithIcon story renders snapshot 1`] = `
<span
  class="tag colorWarning text text--sm text--warning text--bold-weight"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="1"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  ​
  <span
    class="body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> WithLongTextAndIcon story renders snapshot 1`] = `
<span
  class="tag colorWarning text text--sm text--warning text--bold-weight"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="2"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  ​
  <span
    class="body"
  >
    This tag has a really long text message
  </span>
</span>
`;
